--- a/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/widgets/ContentPanel.form
+++ b/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/widgets/ContentPanel.form
@@ -19,7 +19,7 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="prevPageThumbnail" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
               <Component id="productView1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="productView2" min="-2" max="-2" attributes="0"/>
@@ -47,7 +47,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="productView2" min="-2" max="-2" attributes="0"/>
                   <Component id="productView1" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="prevPageThumbnail" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="prevPageThumbnail" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -78,16 +78,6 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="afleurdeuxpots802.widgets.PageThumbnail" name="prevPageThumbnail">
-      <Properties>
-        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[160, 180]"/>
-        </Property>
-      </Properties>
-      <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="prevPageThumbnailMouseClicked"/>
-      </Events>
-    </Component>
     <Component class="afleurdeuxpots802.widgets.ProductView" name="productView1">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -145,6 +135,11 @@
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="nextPageThumbnailMouseClicked"/>
+      </Events>
+    </Component>
+    <Component class="afleurdeuxpots802.widgets.PageThumbnail" name="prevPageThumbnail">
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="prevPageThumbnailMouseClicked"/>
       </Events>
     </Component>
   </SubComponents>
