--- a/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/widgets/ContentPanel.form
+++ b/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/widgets/ContentPanel.form
@@ -81,56 +81,56 @@
     <Component class="afleurdeuxpots802.widgets.ProductView" name="productView1">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[160, 180]"/>
+          <Dimension value="[160, 220]"/>
         </Property>
       </Properties>
     </Component>
     <Component class="afleurdeuxpots802.widgets.ProductView" name="productView2">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[160, 180]"/>
+          <Dimension value="[160, 220]"/>
         </Property>
       </Properties>
     </Component>
     <Component class="afleurdeuxpots802.widgets.ProductView" name="productView3">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[160, 180]"/>
+          <Dimension value="[160, 220]"/>
         </Property>
       </Properties>
     </Component>
     <Component class="afleurdeuxpots802.widgets.ProductView" name="productView4">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[160, 180]"/>
+          <Dimension value="[160, 220]"/>
         </Property>
       </Properties>
     </Component>
     <Component class="afleurdeuxpots802.widgets.ProductView" name="productView5">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[160, 180]"/>
+          <Dimension value="[160, 220]"/>
         </Property>
       </Properties>
     </Component>
     <Component class="afleurdeuxpots802.widgets.ProductView" name="productView6">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[160, 180]"/>
+          <Dimension value="[160, 220]"/>
         </Property>
       </Properties>
     </Component>
     <Component class="afleurdeuxpots802.widgets.ProductView" name="productView7">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[160, 180]"/>
+          <Dimension value="[160, 220]"/>
         </Property>
       </Properties>
     </Component>
     <Component class="afleurdeuxpots802.widgets.PageThumbnail" name="nextPageThumbnail">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[160, 180]"/>
+          <Dimension value="[160, 220]"/>
         </Property>
       </Properties>
       <Events>
@@ -138,6 +138,11 @@
       </Events>
     </Component>
     <Component class="afleurdeuxpots802.widgets.PageThumbnail" name="prevPageThumbnail">
+      <Properties>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[160, 220]"/>
+        </Property>
+      </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="prevPageThumbnailMouseClicked"/>
       </Events>
