[highFi] print product no when "Buy" clicked.

--- a/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/widgets/ProductView.form
+++ b/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/widgets/ProductView.form
@@ -27,14 +27,12 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="priceLabel" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="nbSpinner" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="addToCartButton" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="nameLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="31" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -48,12 +46,9 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="imgLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="priceLabel" min="-2" max="-2" attributes="0"/>
-                  <Group type="103" alignment="0" groupAlignment="3" attributes="0">
-                      <Component id="nbSpinner" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="addToCartButton" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="priceLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="addToCartButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -71,12 +66,13 @@
         <Property name="text" type="java.lang.String" value="0,00 &#x20ac;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JSpinner" name="nbSpinner">
-    </Component>
     <Component class="javax.swing.JButton" name="addToCartButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Buy"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addToCartButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="imgLabel">
       <Properties>
