--- a/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/pages/content/view/ContentPanel.form
+++ b/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/pages/content/view/ContentPanel.form
@@ -78,61 +78,61 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="afleurdeuxpots802.widgets.ProductView" name="productView1">
+    <Component class="afleurdeuxpots802.pages.content.view.ProductView" name="productView1">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[160, 220]"/>
         </Property>
       </Properties>
     </Component>
-    <Component class="afleurdeuxpots802.widgets.ProductView" name="productView2">
+    <Component class="afleurdeuxpots802.pages.content.view.ProductView" name="productView2">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[160, 220]"/>
         </Property>
       </Properties>
     </Component>
-    <Component class="afleurdeuxpots802.widgets.ProductView" name="productView3">
+    <Component class="afleurdeuxpots802.pages.content.view.ProductView" name="productView3">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[160, 220]"/>
         </Property>
       </Properties>
     </Component>
-    <Component class="afleurdeuxpots802.widgets.ProductView" name="productView4">
+    <Component class="afleurdeuxpots802.pages.content.view.ProductView" name="productView4">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[160, 220]"/>
         </Property>
       </Properties>
     </Component>
-    <Component class="afleurdeuxpots802.widgets.ProductView" name="productView5">
+    <Component class="afleurdeuxpots802.pages.content.view.ProductView" name="productView5">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[160, 220]"/>
         </Property>
       </Properties>
     </Component>
-    <Component class="afleurdeuxpots802.widgets.ProductView" name="productView6">
+    <Component class="afleurdeuxpots802.pages.content.view.ProductView" name="productView6">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[160, 220]"/>
         </Property>
       </Properties>
     </Component>
-    <Component class="afleurdeuxpots802.widgets.ProductView" name="productView7">
+    <Component class="afleurdeuxpots802.pages.content.view.ProductView" name="productView7">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[160, 220]"/>
         </Property>
       </Properties>
     </Component>
-    <Component class="afleurdeuxpots802.widgets.PageThumbnail" name="nextPageThumbnail">
+    <Component class="afleurdeuxpots802.pages.content.view.PageThumbnail" name="nextPageThumbnail">
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="nextPageThumbnailMouseClicked"/>
       </Events>
     </Component>
-    <Component class="afleurdeuxpots802.widgets.PageThumbnail" name="prevPageThumbnail">
+    <Component class="afleurdeuxpots802.pages.content.view.PageThumbnail" name="prevPageThumbnail">
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="prevPageThumbnailMouseClicked"/>
       </Events>
