--- a/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/pages/panier/PanierPage.form
+++ b/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/pages/panier/PanierPage.form
@@ -36,14 +36,14 @@
                   </Group>
               </Group>
           </Group>
-          <Component id="header1" max="32767" attributes="0"/>
+          <Component id="header1" min="-2" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <Component id="header1" min="-2" pref="204" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="header1" min="-2" pref="206" max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" pref="45" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="221" max="-2" attributes="0"/>
               <Component id="jPanel1" max="32767" attributes="0"/>
@@ -80,7 +80,7 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="1101" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
@@ -92,8 +92,6 @@
         </Container>
       </SubComponents>
     </Container>
-    <Component class="afleurdeuxpots802.header.Header" name="header1">
-    </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -101,6 +99,11 @@
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="Mon Panier"/>
+      </Properties>
+    </Component>
+    <Component class="afleurdeuxpots802.header.Header" name="header1">
+      <Properties>
+        <Property name="full" type="boolean" value="true"/>
       </Properties>
     </Component>
   </SubComponents>
