[HighFi] Bindings from and to panier added.

--- a/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/header/Header.form
+++ b/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/header/Header.form
@@ -58,6 +58,9 @@
           <Image iconType="3" name="/images/Panie_ plein.png"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel2MouseClicked"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel1">
 
